# rust-playground

./: .gitignore  README.md
01_rust_lang/06_ownership/src/: main.rs
02_grpc_microservice/: Cargo.toml  README.md
02_grpc_microservice/src/: client.rs
02_microservice_grpc_example/: Cargo.toml  README.md  build.rs
02_microservice_grpc_example/src/: server.rs
03_tcp_chat_server/: Cargo.toml  README.md
03_tcp_chat_server/src/: main.rs
04_todo_service/: Cargo.toml  README.md  Rocket.toml
04_todo_service/src/: main.rs
04_todos_api/: Cargo.toml  README.md
04_todos_api/demo/webapp/: index.html
04_todos_api/postman_collections/: 01-Rust_Todos_API.postman_collection.json
04_todos_api/src/: db.rs  main.rs
04_todos_api/src/health/: routes.rs
04_todos_api/src/todos/: mod.rs  model.rs  routes.rs
05_actix_service/: .env  Cargo.toml  docker-compose.yaml  init-mongo.js
05_actix_service/demo/postman/: rust_routine_api.postman_collection.json
05_actix_service/src/: main.rs
05_actix_service/src/api/: routine_api.rs
05_actix_service/src/models/: mod.rs
05_actix_service/src/repository/: mongo_repo.rs
11_match_control_flow/src/: main.rs
13_restaurant/src/restaurant/: back_of_house.rs
14_common_collections/src/: main.rs
15_error_handling/src/: main.rs
16_generics/src/: main.rs
18_lifetimes/src/: main.rs
5_functions_control_flow/src/: main.rs
6_ownership/src/: main.rs
7_structs/src/: main.rs
8_structs_rectangle/src/: main.rs
9_method_syntax/src/: main.rs
code/ai/nn/: Cargo.toml
code/ai/nn/src/: data.rs  main.rs
code/services/02_grpc_microservice/: Cargo.toml  README.md
code/services/04_todos_api/: .env  Cargo.toml  docker-compose.yaml
code/services/05_actix_service/: README.md  docker-compose.yaml  init-mongo.js
learning/01_rust_lang/05_functions_control_flow/: Cargo.toml
rust-lang/13_restaurant/src/: main.rs
(+22 files in other folders)
