[package]
name = "todos_api"
version = "0.1.0"
authors = ["David Vega Lichacz <davidvegalichacz@gmail.com>"]
edition = "2021"

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
schemars = { version = "0.8.8", features = ["chrono", "uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.20.3", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel_migrations = "1.4"
lazy_static = "1.4"
serde_json = "1.0.72"
r2d2 = "0.8"
dropshot = "0.7.0"